se creó el codigo de agregar habitaciones y hacer reservas

--- a/templates/gestionHabitaciones.html
+++ b/templates/gestionHabitaciones.html
@@ -5,16 +5,8 @@
   type="text/css"
   href="{{ url_for('static', filename='css/gestionHabitaciones.css') }}"
 /> -->
-<link
-  rel="stylesheet"
-  type="text/css"
-  href="{{ url_for('static', filename='css/base-tables.css') }}"
-/>
-<link
-  rel="stylesheet"
-  type="text/css"
-  href="{{ url_for('static', filename='css/base-buttons.css') }}"
-/>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base-tables.css') }}" />
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base-buttons.css') }}" />
 
 {% endblock %} {% block content %}
 <!-- MODAL DESCRIPTION AND VALUE EDITION -->
@@ -32,13 +24,7 @@
           <input type="date" class="campo-modal" disabled /> -->
 
       <label><b>Descripción</b></label>
-      <textarea
-        class="campo-modal"
-        placeholder="Comentario"
-        maxlength="630"
-        cols="30"
-        rows="10"
-      ></textarea>
+      <textarea class="campo-modal" placeholder="Comentario" maxlength="630" cols="30" rows="10"></textarea>
       <!-- <input type="text" placeholder="Comentario" /> -->
 
       <!-- <input type="checkbox" checked="checked" /> Recordarme -->
@@ -48,24 +34,13 @@
       <div>
         <button type="submit" class="modal-confirmbtn">
           Confirmar
-          <img
-            src="img/svg/fa/check-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
+          <img src="img/svg/fa/check-solid.svg" alt="icono logout" height="30" />
         </button>
       </div>
       <div>
-        <button
-          type="button"
-          onclick="document.getElementById('modal-id02').style.display='none'"
-          class="modal-cancelbtn"
-        >
-          Cancelar<img
-            src="img/svg/fa/xmark-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
+        <button type="button" onclick="document.getElementById('modal-id02').style.display='none'"
+          class="modal-cancelbtn">
+          Cancelar<img src="img/svg/fa/xmark-solid.svg" alt="icono logout" height="30" />
         </button>
       </div>
     </div>
@@ -89,14 +64,7 @@
       <input type="date" class="campo-modal" disabled />
 
       <label><b>Comentario</b></label>
-      <textarea
-        class="campo-modal"
-        placeholder="Comentario"
-        maxlength="630"
-        cols="30"
-        rows="10"
-        disabled
-      ></textarea>
+      <textarea class="campo-modal" placeholder="Comentario" maxlength="630" cols="30" rows="10" disabled></textarea>
       <!-- <input type="text" placeholder="Comentario" /> -->
 
       <!-- <input type="checkbox" checked="checked" /> Recordarme -->
@@ -106,24 +74,13 @@
       <div>
         <button type="submit" class="modal-confirmbtn">
           Confirmar
-          <img
-            src="img/svg/fa/check-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
+          <img src="img/svg/fa/check-solid.svg" alt="icono logout" height="30" />
         </button>
       </div>
       <div>
-        <button
-          type="button"
-          onclick="document.getElementById('modal-id03').style.display='none'"
-          class="modal-cancelbtn"
-        >
-          Cancelar<img
-            src="img/svg/fa/xmark-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
+        <button type="button" onclick="document.getElementById('modal-id03').style.display='none'"
+          class="modal-cancelbtn">
+          Cancelar<img src="img/svg/fa/xmark-solid.svg" alt="icono logout" height="30" />
         </button>
       </div>
     </div>
@@ -161,24 +118,13 @@
       <div>
         <button type="submit" class="modal-confirmbtn">
           Confirmar
-          <img
-            src="img/svg/fa/check-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
+          <img src="img/svg/fa/check-solid.svg" alt="icono logout" height="30" />
         </button>
       </div>
       <div>
-        <button
-          type="button"
-          onclick="document.getElementById('modal-id04').style.display='none'"
-          class="modal-cancelbtn"
-        >
-          Cancelar<img
-            src="img/svg/fa/xmark-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
+        <button type="button" onclick="document.getElementById('modal-id04').style.display='none'"
+          class="modal-cancelbtn">
+          Cancelar<img src="img/svg/fa/xmark-solid.svg" alt="icono logout" height="30" />
         </button>
       </div>
     </div>
@@ -190,13 +136,13 @@
 
 <!-- MODAL ADDING ROOM -->
 <div id="modal-id05" class="modal">
-  <form class="modal-content animate" action="/action_page.php">
+  <form class="modal-content animate" action="/admin-rooms" method="POST">
     <div class="modal-container">
       <label>
-        <h1>¿Cuántas habitaciones nuevas de tipo Estándar se van a crear?</h1>
+        <h2>¿Cuántas habitaciones nuevas de tipo Estándar se van a crear?</h2>
       </label>
-      <label><b>Valor de las Habitaciones</b></label>
-      <input type="number" class="campo-modal" min="1" />
+      <label><b>Cantidad Habitaciones</b></label>
+      <input type="number" class="campo-modal" min="1" name="numero_habitaciones" />
 
       <!-- <label><b>Fecha</b></label>
           <input type="date" class="campo-modal" disabled /> -->
@@ -213,24 +159,13 @@
       <div>
         <button type="submit" class="modal-confirmbtn">
           Confirmar
-          <img
-            src="img/svg/fa/check-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
+          <img src="img/svg/fa/check-solid.svg" alt="icono logout" height="30" />
         </button>
       </div>
       <div>
-        <button
-          type="button"
-          onclick="document.getElementById('modal-id05').style.display='none'"
-          class="modal-cancelbtn"
-        >
-          Cancelar<img
-            src="img/svg/fa/xmark-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
+        <button type="button" onclick="document.getElementById('modal-id05').style.display='none'"
+          class="modal-cancelbtn">
+          Cancelar<img src="img/svg/fa/xmark-solid.svg" alt="icono logout" height="30" />
         </button>
       </div>
     </div>
@@ -266,24 +201,13 @@
       <div>
         <button type="submit" class="modal-confirmbtn">
           Confirmar
-          <img
-            src="img/svg/fa/check-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
+          <img src="img/svg/fa/check-solid.svg" alt="icono logout" height="30" />
         </button>
       </div>
       <div>
-        <button
-          type="button"
-          onclick="document.getElementById('modal-id06').style.display='none'"
-          class="modal-cancelbtn"
-        >
-          Cancelar<img
-            src="img/svg/fa/xmark-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
+        <button type="button" onclick="document.getElementById('modal-id06').style.display='none'"
+          class="modal-cancelbtn">
+          Cancelar<img src="img/svg/fa/xmark-solid.svg" alt="icono logout" height="30" />
         </button>
       </div>
     </div>
@@ -332,12 +256,8 @@
             <td>{{ habitaciones[i][1] }}</td>
             <td>{{ habitaciones[i][2] }}</td>
             <td>
-              <a
-                href="/eliminarRoom/{{habitaciones[i][0]}}"
-                class="btn-submit btn-submit-red btnEliminar"
-                id="btnEliminarRoom"
-                >Eliminar</a
-              >
+              <a href="/eliminarRoom/{{habitaciones[i][0]}}" class="btn-submit btn-submit-red btnEliminar"
+                id="btnEliminarRoom">Eliminar</a>
             </td>
           </tr>
           {% endfor %}
@@ -345,14 +265,8 @@
       </table>
     </div>
     <div class="btn-submit-group">
-      <input
-        class="btn-submit btn-submit-blue btnEditar"
-        type="submit"
-        name="botonEditar"
-        value="Agregar Habitación"
-        onclick="document.getElementById('modal-id05').style.display='block'"
-        data-open="modal-id05"
-      />
+      <input class="btn-submit btn-submit-blue btnEditar" type="submit" name="botonEditar" value="Agregar Habitación"
+        onclick="document.getElementById('modal-id05').style.display='block'" data-open="modal-id05" />
       <!-- <br />
             <select name="estado" id="estado">
               <option value="d">Desocupada</option>
@@ -378,7 +292,7 @@
   </section>
 </section>
 <script>
-  
+
 </script>
 
 {% endblock %}
