--- a/templates/base.html
+++ b/templates/base.html
@@ -114,14 +114,14 @@
               <span class="title">Inicio</span>
             </a>
           </li>
-          <li>
+          <!-- <li>
             <a href="{{ url_for('rooms') }}">
               <span class="icon">
                 <i class="fa-solid fa-bed"></i>
               </span>
               <span class="title">Habitaciones</span>
             </a>
-          </li>
+          </li> -->
           <li>
             <a href="{{ url_for('booking') }}">
               <span class="icon">
@@ -148,17 +148,11 @@
           </li>
           <li>
             <!-- TODO if logged in then go to user -->
-            <a href="#">
-              <span
-                class="icon modal-btn"
-                onclick="openModal()"
-                data-open="modal-id01"
-              >
+            <a href="/admin-admins">
+              <span class="icon modal-btn">
                 <i class="fa-solid fa-circle-user"></i>
               </span>
-              <span class="title" onclick="openModal()" data-open="modal-id01"
-                >Usuario</span
-              >
+              <span class="title">Usuario</span>
             </a>
           </li>
           <li>
