--- a/templates/gestionAdministradores.html
+++ b/templates/gestionAdministradores.html
@@ -19,8 +19,24 @@
   type="text/css"
   href="{{ url_for('static', filename='css/base-buttons.css') }}"
 />
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('static', filename='css/base-menuAdmin.css') }}"
+/>
 {% endblock %} {% block content %}
-
+<div class="admin-navbar">
+  <div class="subnav">
+    <button class="subnavbtn btn-submit btn-submit-blue">
+      MENÚ ADMIN <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="subnav-content">
+      <a href="{{ url_for('admins_home') }}">Gestión Habitaciones</a>
+      <a href="{{ url_for('admin_users') }}">Gestión Usuarios</a>
+      <a href="{{ url_for('admin_admins') }}">Gestión Admins (SA)</a>
+    </div>
+  </div>
+</div>
 <!-- MODAL SAVE DATA-ADMIN -->
 <div id="modal-id04" class="modal">
   <form class="modal-content animate" action="/action_page.php">
