--- a/templates/reservas.html
+++ b/templates/reservas.html
@@ -26,10 +26,12 @@
   type="text/css"
   href="{{ url_for('static', filename='css/reservas.css') }}"
 />
-{% endblock %} 
-
-{% block content %}
-
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('static', filename='css/habitaciones.css') }}"
+/>
+{% endblock %} {% block content %}
 <section class="dataUser du-background">
   <section class="booking form">
     <h2>Confirmar Reserva</h2>
@@ -38,73 +40,178 @@
         <label for="check-in">Check-In</label>
         <span>
           <i class="fa-solid fa-id-card"></i>
-          <input type="date" class="input_booking" name="Check-In" id="Check-In-Booking" value="{{ reserva['check-in'] }}" />
+          <input
+            type="date"
+            class="input_booking"
+            name="Check-In"
+            id="Check-In-Booking"
+            value="{{ reserva['check-in'] }}"
+          />
         </span>
       </p>
       <p>
         <label for="check-out">Check-Out</label>
         <span>
           <i class="fa-solid fa-person"></i>
-          <input type="date" class="input_booking" name="Check-Out" id="Check-Out-Booking" value="{{ reserva['check-out'] }}" />
+          <input
+            type="date"
+            class="input_booking"
+            name="Check-Out"
+            id="Check-Out-Booking"
+            value="{{ reserva['check-out'] }}"
+          />
         </span>
       </p>
       <p>
         <label for="huespedes">Huéspedes</label>
         <span>
           <i class="fa-solid fa-person"></i>
-          <input type="number" class="input_booking" name="Huespedes" id="Huespedes" value="{{ reserva['huespedes'] }}" />
+          <input
+            type="number"
+            class="input_booking"
+            name="Huespedes"
+            id="Huespedes"
+            value="{{ reserva['huespedes'] }}"
+          />
         </span>
       </p>
       <p>
         <label for="habitaciones">Cantidad Habitaciones</label>
         <span>
           <i class="fa-solid fa-cake-candles"></i>
-          <input type="number" class="input_booking" name="Habitaciones" id="Habitaciones" value="{{ reserva['habitaciones'] }}" />
+          <input
+            type="number"
+            class="input_booking"
+            name="Habitaciones"
+            id="Habitaciones"
+            value="{{ reserva['habitaciones'] }}"
+          />
         </span>
       </p>
       <p>
         <label for="cantidadNoches">Cantidad de Noches</label>
         <span>
           <i class="fa-solid fa-cake-candles"></i>
-          <input type="text" class="input_booking" name="CantidadNoches" id="CantidadNoches" value="" readonly/>
+          <input
+            type="text"
+            class="input_booking"
+            name="CantidadNoches"
+            id="CantidadNoches"
+            value=""
+            readonly
+          />
         </span>
       </p>
       <p>
         <label for="precioTotalHabitacion">Precio por Habitacion</label>
         <span>
           <i class="fa-solid fa-cake-candles"></i>
-          <input type="text" class="input_booking" name="PrecioTotalHabitacion" id="PrecioTotalHabitacion" value="" readonly/>
+          <input
+            type="text"
+            class="input_booking"
+            name="PrecioTotalHabitacion"
+            id="PrecioTotalHabitacion"
+            value=""
+            readonly
+          />
         </span>
       </p>
       <p>
         <label for="valorTotal">Valor Total</label>
         <span>
           <i class="fa-solid fa-cake-candles"></i>
-          <input type="text" class="input_booking" name="ValorTotal" id="ValorTotal" value="" readonly/>
+          <input
+            type="text"
+            class="input_booking"
+            name="ValorTotal"
+            id="ValorTotal"
+            value=""
+            readonly
+          />
         </span>
       </p>
 
       <div class="btn-submit-group">
-        <input class="btn-submit btn-submit-blue" type="submit" name="gestion_usuario" id = "Reservar-Booking" value="Reservar" />
+        <input
+          class="btn-submit btn-submit-blue"
+          type="submit"
+          name="gestion_usuario"
+          id="Reservar-Booking"
+          value="Reservar"
+        />
         <!-- <input class="btn-submit btn-submit-red" type="submit" name="gestion_usuario" value="Eliminar" /> -->
-        <input class="btn-submit btn-submit-gray" type="submit" name="gestion_usuario" id="cancelar_reserva"
-          value="Cancelar" />
+        <input
+          class="btn-submit btn-submit-gray"
+          type="submit"
+          name="gestion_usuario"
+          id="cancelar_reserva"
+          value="Cancelar"
+        />
       </div>
     </form>
     <p>
       <span>
-        <input class="btn-submit btn-submit-blue" type="submit" name="gestion_usuario" id = "verDisponibilidad" value="Ver Disponibilidad" />
-
+        <input
+          class="btn-submit btn-submit-blue"
+          type="submit"
+          name="gestion_usuario"
+          id="verDisponibilidad"
+          value="Ver Disponibilidad"
+        />
       </span>
     </p>
-        
   </section>
 
-  
+  <div class="galeria-img form">
+    <h2>Habitaciones</h2>
+    <!-- <div class="img-numero">1 / 7</div> -->
+    <img
+      src="{{ url_for('static',
+                filename='img/img-habitacion/230203934.jpg') }}"
+      alt="Galeria CSS 1"
+      style="width: 100%"
+    />
+  </div>
 
+  <section class="list-characteristics-block">
+    <h2>Características</h2>
+    <section class="list-characteristics">
+      <span class="precio">$450,000.00 COP/noche</span>
+      <!-- <ul>
+        <li></li>
+      </ul> -->
+      <ul>
+        <li>28m<sup>2</sup></li>
+        <li>Artículos de aseo gratis</li>
+        <li>Albornoz</li>
+        <li>Caja fuerte</li>
+        <li>Bidet</li>
+      </ul>
+      <ul>
+        <li>WC</li>
+        <li>Bañera o ducha</li>
+        <li>Toallas</li>
+        <li>Ropa de cama</li>
+        <li>Enchufe cerca de la cama</li>
+      </ul>
+      <ul>
+        <li>Zona de estar</li>
+        <li>TV de pantalla plana</li>
+        <li>Nevera</li>
+        <li>Microondas</li>
+        <li>Secador de pelo</li>
+      </ul>
+      <ul>
+        <li>Zona de cocina</li>
+        <li>Armario</li>
+        <li>Escritorio</li>
+        <li>Aire acondicionado individual para cada alojamiento</li>
+        <li>Canales por cable</li>
+      </ul>
+    </section>
+  </section>
+
+  {% endblock %} {% block scripts %}
+  <script src="{{ url_for('static', filename='js/agregarAdmin.js' ) }}"></script>
+  {% endblock %}
 </section>
-{% endblock %}
-
-{% block scripts %}
-<script src="{{ url_for('static', filename='js/agregarAdmin.js' ) }}"></script>
-{% endblock %}
