correcciones in 'main'

--- a/templates/comentarios.html
+++ b/templates/comentarios.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base-buttons.css') }}" />
 
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/reviews.css') }}" />
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/reservas.css') }}" />
 {% endblock %}
 
 {% block content %}
