--- a/templates/gestionHabitaciones.html
+++ b/templates/gestionHabitaciones.html
@@ -62,26 +62,20 @@
 
     <div class="modal-container-button">
       <div>
-        <button type="submit" class="modal-confirmbtn">
+        <button
+          type="submit"
+          class="modal-confirmbtn btn-submit btn-submit-blue"
+        >
           Confirmar
-          <img
-            src="img/svg/fa/check-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
         </button>
       </div>
       <div>
         <button
           type="button"
           onclick="document.getElementById('modal-id02').style.display='none'"
-          class="modal-cancelbtn"
+          class="modal-cancelbtn btn-submit btn-submit-red"
         >
-          Cancelar<img
-            src="img/svg/fa/xmark-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
+          Cancelar
         </button>
       </div>
     </div>
@@ -120,26 +114,20 @@
 
     <div class="modal-container-button">
       <div>
-        <button type="submit" class="modal-confirmbtn">
+        <button
+          type="submit"
+          class="modal-confirmbtn btn-submit btn-submit-blue"
+        >
           Confirmar
-          <img
-            src="img/svg/fa/check-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
         </button>
       </div>
       <div>
         <button
           type="button"
           onclick="document.getElementById('modal-id03').style.display='none'"
-          class="modal-cancelbtn"
+          class="modal-cancelbtn btn-submit btn-submit-red"
         >
-          Cancelar<img
-            src="img/svg/fa/xmark-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
+          Cancelar
         </button>
       </div>
     </div>
@@ -175,26 +163,20 @@
 
     <div class="modal-container-button">
       <div>
-        <button type="submit" class="modal-confirmbtn">
+        <button
+          type="submit"
+          class="modal-confirmbtn btn-submit btn-submit-blue"
+        >
           Confirmar
-          <img
-            src="img/svg/fa/check-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
         </button>
       </div>
       <div>
         <button
           type="button"
           onclick="document.getElementById('modal-id04').style.display='none'"
-          class="modal-cancelbtn"
+          class="modal-cancelbtn btn-submit btn-submit-red"
         >
-          Cancelar<img
-            src="img/svg/fa/xmark-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
+          Cancelar
         </button>
       </div>
     </div>
@@ -232,26 +214,20 @@
 
     <div class="modal-container-button">
       <div>
-        <button type="submit" class="modal-confirmbtn">
+        <button
+          type="submit"
+          class="modal-confirmbtn btn-submit btn-submit-blue"
+        >
           Confirmar
-          <img
-            src="img/svg/fa/check-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
         </button>
       </div>
       <div>
         <button
           type="button"
           onclick="document.getElementById('modal-id05').style.display='none'"
-          class="modal-cancelbtn"
+          class="modal-cancelbtn btn-submit btn-submit-red"
         >
-          Cancelar<img
-            src="img/svg/fa/xmark-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
+          Cancelar
         </button>
       </div>
     </div>
