validaciones de campos no vacios, entre otros

--- a/templates/base.html
+++ b/templates/base.html
@@ -100,11 +100,11 @@
         </li>
         <li>
           <!-- TODO if logged in then go to user -->
-          <a href="#">
-            <span class="icon modal-btn" onclick="openModal()" data-open="modal-id01">
+          <a href="/admin-admins">
+            <span class="icon modal-btn">
               <i class="fa-solid fa-circle-user"></i>
             </span>
-            <span class="title" onclick="openModal()" data-open="modal-id01">Usuario</span>
+            <span class="title">Usuario</span>
           </a>
         </li>
         <li>
