--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -1,20 +1,8 @@
 {% extends "base.html" %} {% block head %}
 
-<link
-  rel="stylesheet"
-  type="text/css"
-  href="{{ url_for('static', filename='css/base-backgrounds.css') }}"
-/>
-<link
-  rel="stylesheet"
-  type="text/css"
-  href="{{ url_for('static', filename='css/base-forms.css') }}"
-/>
-<link
-  rel="stylesheet"
-  type="text/css"
-  href="{{ url_for('static', filename='css/base-buttons.css') }}"
-/>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base-backgrounds.css') }}" />
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base-forms.css') }}" />
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base-buttons.css') }}" />
 
 {% endblock %} {% block content %}
 
@@ -43,17 +31,10 @@
 
     <div class="modal-container-button">
       <div>
-        <button
-          type="button"
-          class="modal-confirmbtn"
-          onclick="document.getElementById('modal-id02').style.display='none'"
-        >
+        <button type="button" class="modal-confirmbtn"
+          onclick="document.getElementById('modal-id02').style.display='none'">
           Aceptar
-          <img
-            src="img/svg/fa/check-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
+          <img src="img/svg/fa/check-solid.svg" alt="icono logout" height="30" />
         </button>
       </div>
       <!-- <div>
@@ -79,36 +60,21 @@
       <label for="correo">Correo</label>
       <span>
         <i class="fa-solid fa-envelope"></i>
-        <input
-          type="email"
-          name="correo"
-          id="correo"
-          placeholder="e.g. mi_correo@esclavosmintic.com"
-        />
+        <input type="email" name="correo" id="correo" placeholder="e.g. mi_correo@esclavosmintic.com" required/>
       </span>
     </p>
     <p>
-      <label for="nombre">Nombre Completo</label>
+      <label for="nombre">Nombre</label>
       <span>
         <i class="fa-solid fa-person"></i>
-        <input
-          type="text"
-          name="nombre"
-          id="nombre"
-          placeholder="e.g. Fulanito"
-        />
+        <input type="text" name="nombre" id="nombre" placeholder="e.g. Fulanito" required/>
       </span>
     </p>
     <p>
       <label for="apellido">Apellido</label>
       <span>
         <i class="fa-solid fa-person"></i>
-        <input
-          type="text"
-          name="apellido"
-          id="apellido"
-          placeholder="e.g. De Tal"
-        />
+        <input type="text" name="apellido" id="apellido" placeholder="e.g. De Tal" required/>
       </span>
     </p>
     <!-- <label for="fechaNacimiento">Fecha de Nacimiento</label>
@@ -118,26 +84,15 @@
       <label for="asunto">Asunto</label>
       <span>
         <i class="fa-solid fa-book"></i>
-        <input
-          type="text"
-          name="asunto"
-          id="asunto"
-          placeholder="PQR-Sugerencia-Consulta"
-        />
+        <input type="text" name="asunto" id="asunto" placeholder="PQR-Sugerencia-Consulta" required/>
       </span>
     </p>
     <p>
       <label for="mensaje">Mensaje</label>
       <span>
         <i class="fa-solid fa-book-open"></i>
-        <textarea
-          name="mensaje"
-          id="mensaje"
-          maxlength="630"
-          cols="30"
-          rows="10"
-          placeholder="Desahógate Aquí"
-        ></textarea>
+        <textarea name="mensaje" id="mensaje" maxlength="630" cols="30" rows="10"
+          placeholder="Desahógate Aquí" required></textarea>
       </span>
     </p>
     <!-- <br>
@@ -147,16 +102,9 @@
             <option value="i">Inactivo</option>
           </select> -->
     <p>
-      <div class="btn-submit-group">
-        <input
-          class="btn-submit btn-submit-blue btnEnviar"
-          type="submit"
-          name="botonEnviar"
-          value="Enviar"
-          onclick="document.getElementById('modal-id02').style.display='block'"
-          data-open="modal-id02"
-        />
-      </div>
+    <div class="btn-submit-group">
+      <input class="btn-submit btn-submit-blue btnEnviar" type="submit" name="botonEnviar" value="Enviar"/>
+    </div>
     </p>
   </form>
 </section>
