--- a/templates/registro.html
+++ b/templates/registro.html
@@ -3,76 +3,87 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base-forms.css') }}" />
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base-buttons.css') }}" />
 {% endblock %} {% block content %}
-<!-- <div class="galeria-img">
-  <div class="img-numero">1 / 7</div>
-  <img
-    src="{{ url_for('static',
-          filename='img/img-habitacion/230031199.jpg') }}"
-    alt="Galeria CSS 1"
-    style="width: 100%"
-  />
-</div> -->
+
+<!-- Modal de validacion contraseñas -->
+<!-- <div class="modal" id="modal_validacion" tabindex="-1" aria-hidden="true">
+  <div class="modal-header">
+    <h5 class="modal-title">Error</h5>
+    <button type="button" class="btn-submit-blue" data-bs-dismiss="modal" aria-label="Close" id="cerrad_modal"></button>
+  </div>
+  <div class="modal-cuerpo" id="modal-cuerpo"></div>
+  <div>
+    <button type="button" class="btn-submit-red" data-bs-dismiss="modal">cerrar</button>
+  </div>
+
+</div>
+
+<button data-bs-toggle="modal" data-bs-target="#modal_validacion" class="abrir_modal_pass" id="abrir_modal_pass">Iniciar Sesión</button> -->
+
+
+
+
+
 <!-- AREA PRINCIPAL -->
 <div class="bg-img"></div>
 <div class="dataUser du-background">
-  <form class="form" action="/registerNew" method="POST">
+  <form class="form" action="/registerNew" method="POST" onsubmit="return validaciones_contrasena()">
     <h2>Registro de Usuario</h2>
     <p>
       <label class="texto" for="cedula"> Cédula: </label>
       <span>
         <i class="fa-solid fa-id-card"></i>
-        <input type="text" name="Cedula" id="cedula" placeholder="e.g. 123456789" />
+        <input type="text" name="Cedula" id="cedula" placeholder="e.g. 123456789" required/>
       </span>
     </p>
     <p>
       <label class="texto" for="nombre">Nombre: </label>
       <span>
         <i class="fa-solid fa-person"></i>
-        <input type="text" name="Nombre" id="nombre" placeholder="e.g. Fulanito" />
+        <input type="text" name="Nombre" id="nombre" placeholder="e.g. Fulanito" required/>
       </span>
     </p>
     <p>
       <label class="texto" for="apellido"> Apellidos: </label>
       <span>
         <i class="fa-solid fa-person"></i>
-        <input type="text" name="Apellidos" id="apellido" placeholder="e.g. De Tal" />
+        <input type="text" name="Apellidos" id="apellido" placeholder="e.g. De Tal" required/>
       </span>
     </p>
     <p>
       <label for="correo">Correo Electrónico: </label>
       <span>
         <i class="fa-solid fa-envelope"></i>
-        <input type="email" name="Correo" id="correo" placeholder="e.g. mi_correo@esclavosmintic.com" />
+        <input type="email" name="Correo" id="correo" placeholder="e.g. mi_correo@esclavosmintic.com" required/>
       </span>
     </p>
     <p>
       <label for="celular">Celular: </label>
       <span>
         <i class="fa-solid fa-mobile-screen-button"></i>
-        <input type="phone" name="Celular" id="celular" placeholder="e.g. 3001234567" />
+        <input type="phone" name="Celular" id="celular" placeholder="e.g. 3001234567" required/>
       </span>
     </p>
     <p>
       <label for="fechaNacimiento">Fecha de Nacimiento: </label>
       <span>
         <i class="fa-solid fa-cake-candles"></i>
-        <input type="date" name="Fecha_Nacimiento" id="fechaNacimiento" />
+        <input type="date" name="Fecha_Nacimiento" id="fechaNacimiento" required/>
       </span>
     </p>
 
     <p>
-      <label for="pw">Contraseña: </label>
+      <label for="nuevaContrasena">Contraseña: </label>
       <span>
         <i class="fa-solid fa-key"></i>
-        <input type="password" name="Nueva_Contrasena" id="nuevaContrasena" placeholder="e.g. q_wFyxs._2brjKqsTo" />
+        <input type="password" name="nuevaContrasena" id="nuevaContrasenaR" placeholder="e.g. q_wFyxs._2brjKqsTo" required/>
       </span>
     </p>
     <p>
-      <label for="pw-validar">Confirmar Contraseña: </label>
+      <label for="repetirContrasena">Confirmar Contraseña: </label>
       <span>
         <i class="fa-solid fa-key"></i>
-        <input type="password" name="Nueva_Contrasena_Validar" id="validarNuevaContrasena"
-          placeholder="e.g. q_wFyxs._2brjKqsTo" />
+        <input type="password" name="repetirContrasena" id="repetirContrasenaR"
+          placeholder="e.g. q_wFyxs._2brjKqsTo" required/>
       </span>
     </p>
     <p>
@@ -82,10 +93,14 @@
     </p>
     <p>
     <div class="btn-submit-group">
-      <input class="btn-submit btn-submit-blue btnConfirm" type="submit" name="botonConfirm" value="Confirmar"
-        onclick="document.getElementById('modal-id04').style.display='block'" data-open="modal-id04" />
+      <input class="btn-submit btn-submit-blue btnConfirm" type="submit" name="botonConfirm" value="Confirmar"/>
     </div>
-    </p>
-  </form>
+  </p>
+</form>
 </div>
+
+{% endblock %}
+
+{% block scripts %}
+<script src="{{ url_for('static', filename='js/agregarAdmin.js' ) }}"></script>
 {% endblock %}
