--- a/templates/reservas.html
+++ b/templates/reservas.html
@@ -12,54 +12,54 @@
 <section class="dataUser">
   <section class="booking form">
     <h2>Confirmar Reserva</h2>
-    <form action="/successful-booking/" class="booking form" method="POST">
+    <form action="/successful-booking/" class="booking form" method="POST"  onsubmit="return completar_datos_reserva()">
       <p>
         <label for="check-in">Check-In</label>
         <span>
           <i class="fa-solid fa-id-card"></i>
-          <input type="date" class="input_booking" name="Check-In" id="Check-In-Booking" value="{{ reserva['check-in'] }}" />
+          <input type="date" class="input_booking" name="Check-In" id="Check-In-Booking" value="{{ reserva['check-in'] }}" required/>
         </span>
       </p>
       <p>
         <label for="check-out">Check-Out</label>
         <span>
           <i class="fa-solid fa-person"></i>
-          <input type="date" class="input_booking" name="Check-Out" id="Check-Out-Booking" value="{{ reserva['check-out'] }}" />
+          <input type="date" class="input_booking" name="Check-Out" id="Check-Out-Booking" value="{{ reserva['check-out'] }}" required/>
         </span>
       </p>
       <p>
         <label for="huespedes">Huéspedes</label>
         <span>
           <i class="fa-solid fa-person"></i>
-          <input type="number" class="input_booking" name="Huespedes" id="Huespedes" value="{{ reserva['huespedes'] }}" />
+          <input type="number" class="input_booking" name="Huespedes" id="Huespedes" value="{{ reserva['huespedes'] }}" required/>
         </span>
       </p>
       <p>
         <label for="habitaciones">Cantidad Habitaciones</label>
         <span>
           <i class="fa-solid fa-cake-candles"></i>
-          <input type="number" class="input_booking" name="Habitaciones" id="Habitaciones" value="{{ reserva['habitaciones'] }}" />
+          <input type="number" class="input_booking" name="Habitaciones" id="Habitaciones" value="{{ reserva['habitaciones'] }}" required/>
         </span>
       </p>
       <p>
         <label for="cantidadNoches">Cantidad de Noches</label>
         <span>
           <i class="fa-solid fa-cake-candles"></i>
-          <input type="text" class="input_booking" name="CantidadNoches" id="CantidadNoches" value="" readonly/>
+          <input type="text" class="input_booking" name="CantidadNoches" id="CantidadNoches" value="" readonly required/>
         </span>
       </p>
       <p>
         <label for="precioTotalHabitacion">Precio por Habitacion</label>
         <span>
           <i class="fa-solid fa-cake-candles"></i>
-          <input type="text" class="input_booking" name="PrecioTotalHabitacion" id="PrecioTotalHabitacion" value="" readonly/>
+          <input type="text" class="input_booking" name="PrecioTotalHabitacion" id="PrecioTotalHabitacion" value="" readonly required/>
         </span>
       </p>
       <p>
         <label for="valorTotal">Valor Total</label>
         <span>
           <i class="fa-solid fa-cake-candles"></i>
-          <input type="text" class="input_booking" name="ValorTotal" id="ValorTotal" value="" readonly/>
+          <input type="text" class="input_booking" name="ValorTotal" id="ValorTotal" value="" readonly required/>
         </span>
       </p>
 
@@ -67,7 +67,7 @@
         <input class="btn-submit btn-submit-blue" type="submit" name="gestion_usuario" id = "Reservar-Booking" value="Reservar" />
         <!-- <input class="btn-submit btn-submit-red" type="submit" name="gestion_usuario" value="Eliminar" /> -->
         <input class="btn-submit btn-submit-gray" type="submit" name="gestion_usuario" id="cancelar_reserva"
-          value="Cancelar" />
+          value="Cancelar" formnovalidate/>
       </div>
     </form>
     <input class="btn-submit btn-submit-blue" type="submit" name="gestion_usuario" id = "verDisponibilidad" value="Ver Disponibilidad" />
